edit files html

--- a/lab2/account/templates/account/details.html
+++ b/lab2/account/templates/account/details.html
@@ -1,4 +1,4 @@
-{% extends './base_account.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 <div>
     <h1>details account</h1>
 </div>
