--- a/lab2/track/templates/track/update.html
+++ b/lab2/track/templates/track/update.html
@@ -1,6 +1,6 @@
-{% extends './base_track.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 <div>
-    <h1>update track</h1>
+    <h1>Update Track</h1>
 </div>
 {% endblock %} {% block content %}
 <div>{{id}}</div>
