--- a/lab2/trainee/templates/trainee/details.html
+++ b/lab2/trainee/templates/trainee/details.html
@@ -1,6 +1,6 @@
-{% extends './base_trainee.html' %} {% block title %}
+{% extends "base.html" %} {% block title %}
 <div>
-    <h1>trainee details</h1>
+    <h1>Trainee Details</h1>
 </div>
 {% endblock %} {% block content %}
 <div>id: {{ id }}</div>
