--- a/lab2/trainee/templates/trainee/list.html
+++ b/lab2/trainee/templates/trainee/list.html
@@ -1,7 +1,7 @@
-{% extends './base_trainee.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 
 <div>
-    <h1>trainee list</h1>
+    <h1>Trainee List</h1>
 </div>
 
 {% endblock %} {% block content %}
