--- a/lab2/account/templates/account/list.html
+++ b/lab2/account/templates/account/list.html
@@ -1,4 +1,4 @@
-{% extends './base_account.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 
 <div>
     <h1>accounts list</h1>
