--- a/lab2/track/templates/track/delete.html
+++ b/lab2/track/templates/track/delete.html
@@ -1,4 +1,4 @@
-{% extends './base_track.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 
 <div>
     <h1>delete track</h1>
