--- a/lab2/track/templates/track/details.html
+++ b/lab2/track/templates/track/details.html
@@ -1,6 +1,6 @@
-{% extends './base_track.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 <div>
-    <h1>track details</h1>
+    <h1>Track Details</h1>
 </div>
 {% endblock %} {% block content %}
 <div>id: {{ id }}</div>
