--- a/lab2/track/templates/track/list.html
+++ b/lab2/track/templates/track/list.html
@@ -1,7 +1,7 @@
 {% extends './base_track.html' %} {% block title %}
 
 <div>
-    <h1>tracks list</h1>
+    <h1>Tracks List</h1>
 </div>
 
 {% endblock %} {% block content %}
