--- a/lab2/trainee/templates/trainee/delete.html
+++ b/lab2/trainee/templates/trainee/delete.html
@@ -1,7 +1,7 @@
-{% extends './base_trainee.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 
 <div>
-    <h1>delete</h1>
+    <h1>Delete</h1>
 </div>
 {% endblock %} {% block content %}
 <div>id: {{ id }}</div>
