--- a/lab2/track/templates/track/create.html
+++ b/lab2/track/templates/track/create.html
@@ -5,13 +5,15 @@
 {% endblock %} {% block content %}
 
 <form method="POST">
+    {% csrf_token %}
+
     <div>
-        <label for="name">Name:</label>
+        <label for="name">Name: </label>
         <input type="text" id="name" name="name" required />
     </div>
 
     <div>
-        <label for="description">description:</label>
+        <label for="description">description: </label>
         <input type="text" id="description" name="description" required />
     </div>
 
