--- a/lab2/track/templates/track/list.html
+++ b/lab2/track/templates/track/list.html
@@ -1,4 +1,4 @@
-{% extends './base_track.html' %} {% block title %}
+{% extends 'base.html' %} {% block title %}
 
 <div>
     <h1>Tracks List</h1>
@@ -9,7 +9,7 @@
     <a href="{% url 'track_create' %}">Create</a>
 </div>
 
-<table>
+<table width="100%" border="1px solid #000">
     <thead>
         <tr>
             <th>ID</th>
@@ -20,18 +20,18 @@
     </thead>
 
     <tbody>
-        {%for track in tracks%}
+        {% for track in tracks %}
         <tr>
             <td>{{track.id}}</td>
             <td>{{track.name}}</td>
             <td>{{track.description}}</td>
             <td>
+                <a href="{%url 'track_details' track.id%}">Details</a>
                 <a href="{%url 'track_update' track.id%}">Update</a>
                 <a href="{%url 'track_delete' track.id%}">Delete</a>
-                <a href="{%url 'track_details' track.id%}">Details</a>
             </td>
         </tr>
-        {%endfor%}
+        {% endfor %}
     </tbody>
 </table>
 
