--- a/lab2/trainee/templates/trainee/create.html
+++ b/lab2/trainee/templates/trainee/create.html
@@ -5,22 +5,41 @@
 {% endblock %} {% block content %}
 
 <form method="POST">
+    {% csrf_token %}
+
     <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+        <label for="first_name">Lirst Name: </label>
+        <input type="text" id="first_name" name="first_name" required />
     </div>
+
     <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+        <label for="last_name">Last Name: </label>
+        <input type="text" id="last_name" name="last_name" required />
     </div>
+
     <div>
-        <label for="age">Age:</label>
-        <input type="number" id="age" name="age" required />
+        <label for="date_of_birth">Date Of Birth: </label>
+        <input type="date" id="date_of_birth" name="date_of_birth" required />
     </div>
+
     <div>
-        <label for="department">Department:</label>
-        <input type="text" id="department" name="department" required />
+        <label for="account_obj">Accounto Username: </label>
+        <select name="account_obj" id="account_obj">
+            {% for account in accounts %}
+            <option value="{{ account.id }}">{{account.username}}</option>
+            {%endfor%}
+        </select>
     </div>
+
+    <div>
+        <label for="track_obj">Track Name: </label>
+        <select name="track_obj" id="track_obj">
+            {% for track in tracks %}
+            <option value="{{ track.id }}">{{track.name}}</option>
+            {% endfor %}
+        </select>
+    </div>
+
     <div>
         <input type="submit" value="Submit" />
     </div>
