--- a/lab2/trainee/templates/trainee/update.html
+++ b/lab2/trainee/templates/trainee/update.html
@@ -4,30 +4,71 @@
 </div>
 {% endblock %} {% block content %}
 
-<div>{{id}}</div>
 <form method="POST">
+    {% csrf_token %}
+
     <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+        <label for="first_name">First Name: </label>
+        <input
+            type="text"
+            id="first_name"
+            name="first_name"
+            value="{{ trainee.first_name }}"
+            required
+        />
     </div>
 
     <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required />
+        <label for="last_name">Last Name: </label>
+        <input
+            type="text"
+            id="last_name"
+            name="last_name"
+            value="{{ trainee.last_name }}"
+            required
+        />
     </div>
 
     <div>
-        <label for="age">Age:</label>
-        <input type="number" id="age" name="age" required />
+        <label for="date_of_birth">Date Of Birth: </label>
+        <input
+            type="date"
+            id="date_of_birth"
+            name="date_of_birth"
+            value="{{ trainee.date_of_birth|date:'Y-m-d' }}"
+            required
+        />
     </div>
 
     <div>
-        <label for="department">Department:</label>
-        <input type="text" id="department" name="department" required />
+        <label for="account_obj">Account Username: </label>
+        <select name="account_obj" id="account_obj">
+            {% for account in accounts %}
+            <option value="{{ account.id }}" 
+            {% if account.id == trainee.account_obj.id %}
+                selected
+            {% endif %}
+                >{{ account.username }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    
+    <div>
+        <label for="track_obj">Track Name: </label>
+        <select name="track_obj" id="track_obj">
+            {% for track in tracks %}
+            <option value="{{ track.id }}" 
+            {% if track.id == trainee.track_obj.id %}
+                selected
+            {% endif %}
+            >{{track.name}}</option>
+            {% endfor %}
+        </select>
     </div>
 
     <div>
         <input type="submit" value="Submit" />
     </div>
 </form>
+
 {% endblock %}
